--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bytemuck = {version="1.13.1", features = ["derive"]}
 cargo-wgsl = "0.0.14"
 egui = "0.22.0"
 egui-winit = "0.22.0"
