--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytemuck = {version="1.13.1", features = ["derive"]}
 cargo-wgsl = "0.0.14"
 egui = "0.22.0"
 egui-winit = "0.22.0"
+image = "0.24.7"
 mupdf = "0.4.2"
 pollster = "0.3.0"
 wgpu = "0.17.0"
